# TPattern

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODING_GUIDE.md  LICENSE  README.md  SCHEMA.md  pyproject.toml  reproduce.sh
.github/workflows/: ci.yml
colab/: README.md  build_offline_notebook.py  tpattern_guided_analysis.ipynb  tpattern_guided_analysis_offline.ipynb  tpattern_worked_example.ipynb
data/: README.md  worldcup_defensive_recovery.csv  worldcup_goals.csv  worldcup_nongoals.csv
data/derivation/: README.md  Temporal_Step1_ExtractSequences.m
examples/: README.md  applied_worldcup_analysis.py  quickstart.py  reproduce_worldcup.py  support_sensitivity.py  validate_null_choice.py
tests/: test_calibrated_pins.py  test_contrast.py  test_dedup.py  test_guided.py  test_null_compare.py  test_reproduction.py  test_support_reporting.py  test_synthetic.py
tpattern/: __init__.py  advisor.py  ci.py  contrast.py  detect.py  diagnostics.py  guided.py  io.py  methods.py  pattern.py  randomise.py  report.py  significance.py  synthetic.py  viz.py
