[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tpattern"
version = "0.1.2"
description = "Open, auditable temporal & sequential pattern analysis (T-patterns) for sport and behaviour"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Andrew Callaway", email = "acallaway@bournemouth.ac.uk" },
]
keywords = ["t-pattern", "THEME", "temporal", "sequence", "sport", "behaviour", "notation analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
test = ["pytest>=7"]
gui = ["ipywidgets>=8", "pandas>=1.3", "openpyxl>=3"]

[project.urls]
Homepage = "https://github.com/ajcallaway/TPattern"
Repository = "https://github.com/ajcallaway/TPattern"
"Archive (DOI)" = "https://doi.org/10.5281/zenodo.21397543"
"Tagging tool (OpenTag)" = "https://opentag.studio"

[tool.setuptools]
packages = ["tpattern"]

[tool.pytest.ini_options]
testpaths = ["tests"]
